configure_file(input: 'server.crt', output: 'server.crt', copy: true)
configure_file(input: 'server.key', output: 'server.key', copy: true)
configure_file(input: 'client.key', output: 'client.key', copy: true)
configure_file(input: 'client.crt', output: 'client.crt', copy: true)
configure_file(input: 'rootCA.crt', output: 'rootCA.crt', copy: true)
configure_file(input: 'server_from_intermediate_with_chain.crt', output: 'server_from_intermediate_with_chain.crt', copy: true)
configure_file(input: 'server_from_intermediate.crt', output: 'server_from_intermediate.crt', copy: true)
configure_file(input: 'server_from_intermediate.key', output: 'server_from_intermediate.key', copy: true)
configure_file(input: 'intermediateCA.crt', output: 'intermediateCA.crt', copy: true)
